# algorithms

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp
Tree/: tree.h
apps/: CMakeLists.txt  main.cpp
include/algorithms/: geometry.h  graph.h  methods.h  number_theory.h  polynomial.h
src/: CMakeLists.txt  geometry.cpp  graph.cpp  main.cpp  methods.cpp  number_theory.cpp
structures/: .graph.cpp.swp  .graph.h.swp  a.out  graph.cpp  graph.h  main.cpp
